fix(ui): make checkboxes more visible

--- a/next-step-for-trello.css
+++ b/next-step-for-trello.css
@@ -13,7 +13,7 @@
   position: absolute;
   top: -4px;
   left: -4px;
-  box-shadow: none;
+  box-shadow: inset 0 0 0 1px #dfe1e6;
   height: 10px;
   width: 10px;
 }
